# Multi-Dimensional-LLM-Eval-Framework

./: .env.example  .gitignore  README.md  REQUIREMENTS_llm_eval_framework.md  main.py  pyproject.toml
.github/workflows/: eval_ci.yml
agent/: models.py  noc_agent.py  run_agent.py
agent/nodes/: action_recommender.py  alarm_classifier.py  context_fetcher.py  root_cause_reasoner.py
agent/prompts/: classifier_v1.yaml  prompt_registry.py  reasoner_v1.yaml  recommender_v1.yaml
agent/tools/: get_device_info.py  query_alarm_history.py  search_runbooks.py
dashboard/: app.py
data/golden_dataset/: _gen_utils.py  correctness_cases.json  faithfulness_cases.json  generate_all.py  generate_correctness_cases.py  generate_faithfulness_cases.py  generate_latency_cases.py  generate_safety_cases.py  (+5 more)
docs/: EVAL_DESIGN.md
eval_runner/: ab_test.py  coverage_analyzer.py  regression_checker.py  results_store.py  runner.py  scorer.py
evaluators/: base_evaluator.py  correctness_evaluator.py  faithfulness_evaluator.py  latency_quality_evaluator.py  robustness_evaluator.py  robustness_stress_test.py  safety_evaluator.py  statistical_significance.py  tradeoff_report.py
prompts/: judge_correctness.yaml  judge_faithfulness.yaml  judge_safety.yaml
reports/: LLM_Eval_Framework_Test_Report.xlsx
scripts/: compare_prompts.py  generate_test_report.py
tests/: test_agent.py  test_ci_pipeline.py  test_correctness_evaluator.py  test_dashboard.py  test_eval_runner.py  test_faithfulness_evaluator.py  test_latency_quality_evaluator.py  test_robustness_evaluator.py  test_safety_evaluator.py
(+4 files in other folders)
